--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: eighth-service-94020 
+application: stage4project-973
 version: 1
 runtime: python27
 api_version: 1
@@ -9,7 +9,7 @@ handlers:
 #   static_files: favicon.ico
 #   upload: favicon\.ico
 
-- url: .*
+- url: /.*
   script: main.app
 
 libraries:
